@@ -192,9 +192,9 @@ struct ReadGroupOrientTracker
     }
 
     const ReadPairOrient&
-    getConsensusOrient()
+    getConsensusOrient(const ReadCounter& readCounter)
     {
-        finalize();
+        finalize(readCounter);
         return _finalOrient;
     }
 
@@ -212,10 +212,9 @@ private:
     }
 
     void
-    finalize()
+    finalize(const ReadCounter& readCounter)
     {
         if (_isFinalized) return;
-
         bool isMaxIndex(false);
         unsigned maxIndex(0);
         for (unsigned i(0); i<_orientCount.size(); ++i)
@@ -241,7 +240,10 @@ private:
             if (_totalOrientCount < minCount)
             {
                 std::ostringstream oss;
-                oss << "ERROR: Too few observations (" << _totalOrientCount << ") to determine pair orientation for " << _rgLabel << "'\n";
+                oss << "ERROR: Too few high-confidence read pairs (" << _totalOrientCount << ") to determine pair orientation for " << _rgLabel << "'\n"
+                    << "\tAt least " << minCount << " high-confidence read pairs are required to determine pair orientation.\n"
+                    << readCounter << "\n";
+
                 BOOST_THROW_EXCEPTION(LogicException(oss.str()));
             }
 
@@ -251,7 +253,10 @@ private:
                 const unsigned maxPercent((_orientCount[maxIndex]*100)/_totalOrientCount);
                 std::ostringstream oss;
                 oss << "ERROR: Can't determine consensus pair orientation of " << _rgLabel << ".\n"
-                    << "\tThe most frequent orientation is '" << _finalOrient << "' (" << maxPercent << "% of " << _totalOrientCount << " total observations)\n";
+                    << "\tThe most frequent orientation is '" << _finalOrient << "' (" << maxPercent << "% of " << _totalOrientCount << " total used read pairs)\n"
+                    << "\tThe fraction of '" << _finalOrient << "' among total high-confidence read pairs needs to be more than " << minMaxFrac << " to determine consensus pair orientation.\n"
+                    << readCounter << "\n";
+
                 BOOST_THROW_EXCEPTION(LogicException(oss.str()));
             }
         }
@@ -438,6 +443,9 @@ struct ReadGroupTracker
             const PAIR_ORIENT::index_t ori(srd._orient);
             addOrient(ori);
 
+            // we define "high-confidence" read pairs as those reads passing all filters
+            addHighConfidenceReadPairCount();
+
             // filter mapped innies on the same chrom
             //
             // note we don't rely on the proper pair bit because this already contains an
@@ -481,7 +489,6 @@ struct ReadGroupTracker
                           << "\n";
 #endif
             }
-
             _buffer.clearBuffer();
         }
 
@@ -503,16 +510,46 @@ struct ReadGroupTracker
     }
 
     void
+    addReadCount()
+    {
+        _stats.readCounter.addReadCount();
+    }
+
+    void
+    addPairedReadCount()
+    {
+        _stats.readCounter.addPairedReadCount();
+    }
+
+    void
+    addUnpairedReadCount() {
+        _stats.readCounter.addUnpairedReadCount();
+    }
+
+    void
+    addPairedLowMapqReadCount() {
+        _stats.readCounter.addPairedLowMapqReadCount();
+    }
+
+    void
+    addHighConfidenceReadPairCount() {
+        _stats.readCounter.addHighConfidenceReadPairCount();
+    }
+
+    void
     finalize()
     {
         if (_isFinalized) return;
 
         // add the remaining data in the buffer
-        if (_buffer.isBufferNormal()) addBufferedData();
+        if (_buffer.isBufferNormal())
+        {
+            addBufferedData();
+        }
         _buffer.clearBuffer();
 
         // finalize pair orientation:
-        _stats.relOrients = _orientInfo.getConsensusOrient();
+        _stats.relOrients = _orientInfo.getConsensusOrient(_stats.readCounter);
 
         if (_stats.relOrients.val() != PAIR_ORIENT::Rp)
         {
@@ -527,13 +564,16 @@ struct ReadGroupTracker
         // finalize insert size distro:
         if (! isInsertSizeConverged())
         {
-            if (_stats.fragStats.totalObservations() < 100)
+            static const unsigned minObservations(100);
+            if (_stats.fragStats.totalObservations() < minObservations)
             {
                 using namespace illumina::common;
 
                 std::ostringstream oss;
                 oss << "ERROR: Can't generate pair statistics for " << _rgLabel << "\n"
-                    << "\tTotal observed read pairs: " << insertSizeObservations() << "\n";
+                    << "\tTotal high-confidence read pairs (FR) used for insert size estimation: " << insertSizeObservations() << "\n"
+                    << "\tAt least " << minObservations << " high-confidence read pairs (FR) are required to estimate insert size.\n"
+                    << _stats.readCounter << "\n";
                 BOOST_THROW_EXCEPTION(LogicException(oss.str()));
             }
             else if (! isInsertSizeChecked())
@@ -544,7 +584,8 @@ struct ReadGroupTracker
             if (! isInsertSizeConverged())
             {
                 log_os << "WARNING: read pair statistics did not converge for " << _rgLabel << "\n"
-                       << "\tTotal observed read pairs: " << insertSizeObservations() << "\n";
+                       << "\tTotal high-confidence read pairs (FR) used for insert size estimation: " << insertSizeObservations() << "\n"
+                       << _stats.readCounter << "\n";
             }
         }
 
@@ -1003,6 +1044,19 @@ extractReadGroupStatsFromAlignmentFile(
                     chromHighestPos[chromIndex] = bamRead.pos();
                     isActiveChrom = true;
 
+                    rgInfo.addReadCount();
+                    if (bamRead.is_paired())
+                    {
+                        rgInfo.addPairedReadCount();
+                        if(bamRead.map_qual()==0)
+                        {
+                            rgInfo.addPairedLowMapqReadCount();
+                        }
+                    }
+                    else{
+                        rgInfo.addUnpairedReadCount();
+                    }
+
                     if (coreFilter.isFilterRead(bamRead)) continue;
 
 #ifdef READ_GROUPS
@@ -1051,7 +1105,6 @@ extractReadGroupStatsFromAlignmentFile(
                     chromHighestPos[chromIndex] += chromSize[chromIndex]/100;
 
                 }
-
             }
         }
     }
